--- a/microservices/loans-prod.yaml
+++ b/microservices/loans-prod.yaml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to Bank Loans related to prod APIs"
+  message: "Welcome to Bank Loans related to Prod APIs"
   contactDetails:
     name: "Evgen Sidorov - Product Owner"
     email: "evgen@gmail.com"
