--- a/microservices/eurekaserver.yaml
+++ b/microservices/eurekaserver.yaml
@@ -1,6 +1,9 @@
 eureka:
   instance:
     hostname: localhost
+server:
+  port: 8080
+
   client:
     fetchRegistry: false # этот сервис не будет вызывать другие микросы ставим false
     registerWithEureka: false #
